[talks] add video links for Rocky Mountain, SF Ruby, Kaigi

--- a/data/talks.yaml
+++ b/data/talks.yaml
@@ -1,16 +1,18 @@
 ---
 - title: "Operating Rails: what about after you deploy?"
   description: "There are a million tutorials out there showing you how to build a blog in Rails (in just 15 minutes!) and how to deploy that Rails app to some cloud provider (in just 5 minutes!), but what about after that first half-hour? When the guide says \"this tutorial of course isn't production ready\", what actually is production-ready? Let's talk about operating Rails apps in production."
-  post_url: "/2025/10/07/operating-rails"
+  post_url: "/2025/11/20/operating-rails/"
   events:
     - name: "Rocky Mountain Ruby"
       date: 2025-10-07
       url: https://rockymtnruby.dev
       slides_url: https://speakerdeck.com/indirect/operating-rails
+      video_url: https://www.youtube.com/watch?v=WP2fWUBPGfI
     - name: "SF Ruby Conference"
       date: 2025-11-20
       url: https://sfruby.com
       slides_url: https://speakerdeck.com/indirect/operating-rails-what-about-after-you-deploy-1c7b6a98-c411-46e7-87fb-1b74a6398f9d
+      video_url: https://www.youtube.com/watch?v=2h2XEyOM6lg
 - title: "<code>rv</code>: a ruby manager for the future"
   description: There’s a new kind of developer tool, combining version manager, dependency manager, environment manager, and script runner. The biggest “language manager” is `uv` for Python, but we can and should have one for Ruby. In this talk, see how we are building `rv`, including why we're using Rust, the new use-cases it unlocks, and how it can be faster and easier to use Ruby than it has ever been before.
   post_url: "/2025/09/30/rv-a-ruby-manager-for-the-future"
@@ -39,6 +41,7 @@
       date: 2025-09-27
       url: https://kaigionrails.org/2025/
       slides_url: https://speakerdeck.com/indirect/rails-on-sqlite-exciting-new-ways-to-cause-outages-36c8702d-e2ea-43bf-9fc6-a47a6caf7c84
+      video_url: https://www.youtube.com/watch?v=UN1_5TonU4I
 - title: "Securing your Software Supply Chain Panel"
   description: "Composability has rapidly accelerated the pace of software development by allowing engineers to reuse openly shared libraries and packages. But the widespread adoption of these components also makes them an enticing avenue of attack for malicious actors. In this fireside session, André Arko (Head of Open Source, Ruby Central) and Dustin Ingram (Director, Python Software Foundation) will join Emilio Escobar (CISO, Datadog) for a discussion about securing your software supply chain. They’ll share practices to verify the provenance of your dependencies, mitigate the risks of using third party components, and secure the software you share with others."
   events:
